# aviutl_ThrowException

./: CHANGELOG.md  CMakeLists.txt  README.md  pack.ps1
src/: throw_exception.cpp
